--- a/src/varibles.less
+++ b/src/varibles.less
@@ -1,10 +1,10 @@
-@bg: "../../../public/assets/bg.jpg";
-@finish: "../../../public/assets/finish.png";
-@start: "../../../public/assets/start.png";
-@loser: "../../../public/assets/loser.png";
-@win: "../../../public/assets/win.png";
-@fail: "../../../public/assets/fail.png";
-@arrow: "../../../public/assets/arrow.png";
+@bg: "/assets/bg.jpg";
+@finish: "/assets/finish.png";
+@start: "/assets/start.png";
+@loser: "/assets/loser.png";
+@win: "/assets/win.png";
+@fail: "/assets/fail.png";
+@arrow: "/assets/arrow.png";
 
 @form-bg: #f8f4e5;
 @cell: #f5a9e71b;
