--- a/src/components/App/style.css
+++ b/src/components/App/style.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   align-items: center;
   justify-items: center;
-  background: url("../../../public/assets/bg.jpg") center center no-repeat;
+  background: url("/assets/bg.jpg") center center no-repeat;
   background-size: cover;
   width: 100vw;
   height: 100vh;
